// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card should handle label prop 1`] = `
<scale-card label="card label">
  <template shadowrootmode="open">
    <div class="card-border" part="border">
      <div aria-label="card label" class="card" part="base" role="group" target="_self">
        <div class="card__body" part="body">
          <slot></slot>
        </div>
      </div>
    </div>
  </template>
  Label
</scale-card>
`;

exports[`Card should handle rel prop 1`] = `
<scale-card rel="card rel">
  <template shadowrootmode="open">
    <div class="card-border" part="border">
      <div class="card" part="base" rel="card rel" role="group" target="_self">
        <div class="card__body" part="body">
          <slot></slot>
        </div>
      </div>
    </div>
  </template>
  Label
</scale-card>
`;

exports[`Card should handle styles prop 1`] = `
<scale-card styles="color=red">
  <template shadowrootmode="open">
    <style>
      color=red
    </style>
    <div class="card-border" part="border">
      <div class="card" part="base" role="group" target="_self">
        <div class="card__body" part="body">
          <slot></slot>
        </div>
      </div>
    </div>
  </template>
  Label
</scale-card>
`;

exports[`Card should handle target prop 1`] = `
<scale-card target="card target">
  <template shadowrootmode="open">
    <div class="card-border" part="border">
      <div class="card" part="base" role="group" target="card target">
        <div class="card__body" part="body">
          <slot></slot>
        </div>
      </div>
    </div>
  </template>
  Label
</scale-card>
`;

exports[`Card should handle to prop 1`] = `
<scale-card to="adresse">
  <template shadowrootmode="open">
    <div class="card-border" part="border">
      <a class="card card--interactive" href="adresse" part="base interactive" target="_self">
        <div class="card__body" part="body">
          <slot></slot>
        </div>
      </a>
    </div>
  </template>
  Label
</scale-card>
`;

exports[`Card should match snapshot 1`] = `
<scale-card>
  <template shadowrootmode="open">
    <div class="card-border" part="border">
      <div class="card" part="base" role="group" target="_self">
        <div class="card__body" part="body">
          <slot></slot>
        </div>
      </div>
    </div>
  </template>
  Label
</scale-card>
`;
